--- a/templates/offer/offer.html
+++ b/templates/offer/offer.html
@@ -112,6 +112,22 @@
 									<span class="ubication">Santa Cruz de la Sierra,Bolivia</span>
 								</div>
 							</div>
+							<div class="offer-contact">
+								<div class="offer-contact-icon">
+									<span class="icon-info"></span>
+								</div>
+								<div class="offer-contact-info">
+									<div>
+										<span><i class="icon-phone"></i> 64 - 23242 </span>
+										<span class="redondito"></span>
+										<span>76890943</span>
+									</div>
+									<div>
+										<span class="ubication"><i class="icon-map"></i>Calle Hernando Siles entre Junin Nro. 210</span>
+									</div>
+								</div>
+								<a href="#"><i class="icon-corner-up-right"></i>Como llegar?</a>
+							</div>
 						</div>
 					</div>
 				</div>
