--- a/templates/offer/offer.html
+++ b/templates/offer/offer.html
@@ -71,6 +71,7 @@
 							<div class="offer-information-1">
 								<div class="offer-information-2">
 									<div class="offer-info-picture"></div>
+									<div class="gradiente"></div>
 									<div class="offer-info-name">
 										<span>Pollis Pollis 2 x 1</span>
 									</div>
@@ -103,15 +104,38 @@
 									</div>
 								</div>
 							</div>
+							<div class="offer-contact-1">
+								<div class="offer-contact-icon">
+									<span class="icon-info"></span>
+								</div>
+								<div class="offer-contact-info">
+									<div>
+										<span><i class="icon-phone"></i> 64 - 23242 </span>
+										<span class="redondito"></span>
+										<span>76890943</span>
+									</div>
+									<div>
+										<span class="ubication"><i class="icon-map"></i>Calle Hernando Siles entre Junin Nro. 210</span>
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="offer-information-more">
 							<div class="offer-business">
+								<div class="business-info-title">
+									<span>Oferta de:</span>
+								</div>
 								<div class="offer-business-logo"></div>
 								<div class="offer-business-info">
 									<span class="name">Pollos Kiky</span>
 									<span class="ubication">Santa Cruz de la Sierra, Bolivia</span>
 								</div>
 							</div>
+							<div class="offer-ubication-1">
+								<span class="icono icon-map-pin"></span>
+								<span class="title">Ubicación</span>
+							</div>
+							<div class="offer-gps"></div>
 							<div class="offer-contact">
 								<div class="offer-contact-icon">
 									<span class="icon-info"></span>
