--- a/templates/menu/menu.css
+++ b/templates/menu/menu.css
@@ -1,17 +1,32 @@
 .Nav-dummer{
+  position: relative;
   background: #000;
-  height: 80px;
-  padding: 20px 0px;
+  height: 60px;
+  padding: 15px 0px;
 }
-.Nav-dummer img{
-  width: 70px;
-  margin-left: 30px;
+.Nav-head-img svg{
+  width: 65px;
+  height: 34px;
+  margin-left: 25px;
+  top: 12px;
+  position: absolute;
 }
 .Nav-icon-open{
   font-size: 26px;
   font-weight: bold;
   float: right;
-  color: #f09200;
+  color: #ba238a;
   margin-right: 20px;
-  margin-top: 10px;
+  margin-top: 0px;
+}
+.Nav-footer{
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  bottom: -2px;
+  background: #f3b12e;
+  background: -moz-linear-gradient(left, #f3b12e 0%, #9ace8c 30%, #47a4f5 53%, #895bc3 74%, #c70a8d 95%);
+  background: -webkit-linear-gradient(left, #f3b12e 0%,#9ace8c 30%,#47a4f5 53%,#895bc3 74%,#c70a8d 95%);
+  background: linear-gradient(to right, #f3b12e 0%,#9ace8c 30%,#47a4f5 53%,#895bc3 74%,#c70a8d 95%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3b12e', endColorstr='#c70a8d',GradientType=1 );
 }
