--- a/templates/menu/menu.html
+++ b/templates/menu/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -15,9 +15,23 @@
 </head>
 <body>
 	<nav class="Nav-dummer">
-    <img src="../../assets/images/logoo-inverse.png" alt="">
-    <span class="icon-menu Nav-icon-open"></span>
-
+    <div class="Nav-head">
+      <div class="Nav-head-img">
+        <svg version="1" xmlns="http://www.w3.org/2000/svg" width="181" height="88" viewBox="0 0 181 88">
+          <circle fill="#FFFFFF" cx="18.7" cy="28" r="2.9"/>
+          <circle fill="#FFFFFF" cx="28.2" cy="28" r="2.9"/>
+          <circle fill="#FFFFFF" cx="37.4" cy="28" r="2.9"/>
+          <path fill="#FFFFFF" d="M55.5 57.8a28.6 28.6 0 0 1-15.7 25.5l-8-8.2a25 25 0 0 0 4.6-2.5 17.4 17.4 0 0 0 6.7-8c.7-1.6 1.1-3.4 1.1-5.4V48.6c-1.9 2-4.3 3.7-7.3 4.8a25.8 25.8 0 0 1-28.1-6 27.4 27.4 0 0 1-7.7-19.5A26.2 26.2 0 0 1 16.9 3.6a31.8 31.8 0 0 1 22.6 0 23.4 23.4 0 0 1 12.9 12.2 35 35 0 0 1 3.2 14.6v27.4zM44.3 30.4c0-4-.6-7.4-2.1-10.1-1.5-2.7-3.5-4.7-5.8-6s-4.8-2-7.5-2.1a16.2 16.2 0 0 0-16.6 16.2c-.2 4.8 1.2 8.5 4 10.9 2.7 2.4 6.1 3.7 10.3 4 2 .2 4 0 6-.6 2.1-.6 3.8-1.5 5.1-2.8l6.6 8.6v-18z"/>
+          <path fill="#FFFFFF" d="M88.5 1.5a26.2 26.2 0 0 1 19 7.8 27.6 27.6 0 0 1 7.9 19A27.6 27.6 0 0 1 98.9 53a25.6 25.6 0 0 1-26.1-3.3A29.9 29.9 0 0 1 63 36.3h11.1a14 14 0 0 0 6.2 6.2c2.7 1.4 5.8 2 9.2 2 4.7 0 8.4-1.5 11.1-4.6 2.7-3.1 4-7 4-11.8 0-4.7-1.5-8.5-4.4-11.4-3-2.9-6.8-4.3-11.6-4.3-3.2 0-6 .7-8.3 2-2.2 1.5-4 3.4-5.3 5.6-1.2 2.3-2 4.9-2.1 7.7-.2 2.9.2 5.7 1.2 8.6L61.7 25.5c.3-3.3 1.2-6.4 2.8-9.4a27.7 27.7 0 0 1 24-14.6z"/>
+          <path fill="#FFFFFF" d="M148.3 1.5a26.2 26.2 0 0 1 19 7.8 27.6 27.6 0 0 1 7.9 19A27.6 27.6 0 0 1 158.7 53a25.6 25.6 0 0 1-26.1-3.3 30 30 0 0 1-9.8-13.4H134a14 14 0 0 0 6.2 6.2c2.7 1.4 5.8 2 9.2 2 4.7 0 8.4-1.5 11.1-4.6 2.7-3.1 4-7 4-11.8 0-4.7-1.4-8.5-4.4-11.4-3-2.9-6.8-4.3-11.6-4.3-3.2 0-6 .7-8.3 2-2.2 1.5-4 3.4-5.3 5.6-1.2 2.3-2 4.9-2.1 7.7-.2 2.9.2 5.7 1.2 8.6l-12.4-10.8c.3-3.3 1.3-6.4 2.8-9.4a27.7 27.7 0 0 1 24-14.6z"/>
+          <g fill="#FFFFFF">
+            <path d="M89.9 63c2.3 0 4.3.7 6 2.2a8.8 8.8 0 0 1 6-2.2c3 0 5.2 1 6.9 3.1 1.3 1.6 2 3.4 1.9 5.5V85c0 1-.5 1.8-1.4 2.4-.9.5-1.8.5-2.8 0-1-.6-1.4-1.4-1.4-2.4V71.6c-.2-1.5-.7-2.5-1.6-2.9l-1.6-.2c-1.3 0-2.2.4-2.6 1a5 5 0 0 0-.7 2v5.9c0 1-.4 1.8-1.3 2.4-1 .5-1.9.5-2.8 0-1-.5-1.4-1.3-1.4-2.4v-5.8c-.2-1.5-.8-2.5-1.7-2.9l-1.5-.2c-1.3 0-2.1.4-2.6 1-.4.8-.6 1.5-.7 2v13.6c0 1-.4 1.8-1.3 2.4-1 .5-1.9.5-2.9 0-.9-.6-1.3-1.4-1.3-2.4V71.6c.2-4.4 2.2-7 5.8-8.2 1-.3 2-.4 3-.4zM130.6 64.9c3.1 2.3 4.7 5.9 4.7 10.6 0 5.1-1.6 8.7-4.7 10.8a10.6 10.6 0 0 1-5.8 1.7c-2.5 0-4.7-.7-6.5-2.1-2.7-2.2-4-5.7-4-10.4 0-5 1.7-8.4 4.8-10.5a9.6 9.6 0 0 1 5.7-1.8c2.2 0 4.1.6 5.8 1.7zm-5.8 17.7c3.4 0 5-2.4 5-7s-1.6-6.9-5-6.9c-1 0-1.8.3-2.7.9-1.5 1-2.3 3-2.3 6v.4c0 4.4 1.7 6.6 5 6.6zM141 62.7c1.2-.1 2 .4 2.6 1.4l.2.5c1.5 6.6 3 11.4 4.2 14.5l.8 1.7a93.6 93.6 0 0 0 5.3-15.2c.2-1.4.8-2.3 2-2.7l.4-.2c1.1-.3 2.2 0 3 1.1.6.7.8 1.4.6 2.1-.7 3.4-1.8 7.2-3.1 11.2a43.6 43.6 0 0 1-4.3 9 4.3 4.3 0 0 1-5 1.7c-1.7-.6-3.2-2.2-4.5-5a91.6 91.6 0 0 1-5-16.5c-.3-1.3 0-2.3 1.1-3.1.5-.4 1-.6 1.7-.5zM168.5 53.7a3 3 0 0 1 1 2.2v.4c0 1-.5 1.8-1.4 2.4-1 .6-2 .6-2.9 0-.9-.6-1.3-1.4-1.3-2.4v-.4c0-.4 0-.7.2-1a2.5 2.5 0 0 1 2.3-1.9c.8 0 1.5.1 2 .7zm0 10.2c.7.6 1 1.2 1 2v19.3c0 1-.5 1.8-1.4 2.4-1 .5-2 .5-2.9 0-.9-.6-1.3-1.4-1.3-2.4V65.9c0-.4 0-.8.3-1.1a2.4 2.4 0 0 1 2.4-1.7c.8 0 1.5.3 2 .8zM180 85.3c0 .3 0 .7-.2 1-.5 1-1.3 1.6-2.5 1.6a3 3 0 0 1-1.2-.2c-1-.5-1.5-1.3-1.5-2.4V56.6c0-.5 0-.9.2-1.3.5-1 1.4-1.5 2.5-1.5.4 0 .7 0 1 .2 1.1.5 1.7 1.3 1.7 2.6v28.7z"/>
+          </g>
+        </svg>
+      </div>
+      <span class="icon-menu Nav-icon-open"></span>
+    </div>
+    <div class="Nav-footer"></div>
 	</nav>
 </body>
 </html>
