--- a/templates/menu/menu.html
+++ b/templates/menu/menu.html
@@ -32,6 +32,48 @@
       <span class="icon-menu Nav-icon-open"></span>
     </div>
     <div class="Nav-footer"></div>
+		<div class="Nav-menu">
+
+			<!-- --> <div class="line"></div>
+			<ul class="Nav-menu-list">
+				<li class="Nav-menu-list-elem">
+					<a href="#inicio">INICIO</a>
+				</li>
+			</ul>
+			<!-- --> <div class="line"></div>
+			<ul class="Nav-menu-list">
+				<li>
+					<a href="#">
+						<img src="../../assets/images/xplorar.png" alt="">
+						EXPLORAR
+					</a>
+				</li>
+			</ul>
+			<!-- --> <div class="line"></div>
+			<ul class="Nav-menu-list">
+				<li>
+					<a href="#">EVENTOS</a>
+				</li>
+				<li>
+					<a href="#">OFERTAS</a>
+				</li>
+				<li>
+					<a href="#">EMPLEOS</a>
+				</li>
+			</ul>
+			<!-- --> <div class="line"></div>
+			<ul class="Nav-menu-list">
+				<li>
+					<a href="#">EMPRESARIAL</a>
+				</li>
+				<li>
+					<a href="#">INGRESAR</a>
+				</li>
+				<li>
+					<a href="#">CONTACTOS</a>
+				</li>
+			</ul>
+		</div>
 	</nav>
 </body>
 </html>
