--- a/templates/offer/offer.css
+++ b/templates/offer/offer.css
@@ -390,12 +390,13 @@
    background: #000;
    height: 40px;
    border-radius: 10px;
-   padding: 3px;
+   padding: 3.1px;
  }
 
  .offer-business-logo {
-   width: 35px;
-   height: 35px;
+   margin-top: 0.5px;
+   width: 34px;
+   height: 34px;
    background: white;
    border-radius: 50%;
    margin-left: 10px;
