--- a/templates/work/work.html
+++ b/templates/work/work.html
@@ -110,16 +110,6 @@
 							</div>
 						</div>
 						<div class="container-work-more">
-							<div class="work-business-info-1">
-								<div class="business-info-title">
-									<span>Solicitud de:</span>
-								</div>
-								<div class="business-info-logo"></div>
-								<div class="business-name1">
-									<span class="font-block">Eventos Bolivia</span>
-									<span>Sucre - Bolivia</span>
-								</div>
-							</div>
 							<div class="work-ubication-1">
 								<span class="icono icon-map-pin"></span>
 								<span class="title">Ubicación</span>
@@ -132,6 +122,7 @@
 								<div class="work-business">
 									<div class="work-business-logo"></div>
 									<span>Openred Sucre</span>
+									<span class="location">Santa Cruz de la Sierra, Bolivia</span>
 								</div>
 							</div>
 						</div>
