--- a/templates/event/event.html
+++ b/templates/event/event.html
@@ -127,16 +127,6 @@
               </div>
             </div>
             <div class="more-event">
-              <div class="business-info1">
-                <div class="business-info1-title">
-                  <span>Organiza</span>
-                </div>
-                <div class="business-info-logo"></div>
-                <div class="business-name">
-                  <span class="font-block">Eventos Bolivia</span>
-                  <span>Sucre - Bolivia</span>
-                </div>
-              </div>
               <div class="more-event-1">
                 <div class="more-event-icon">
                   <span class="icon-map-pin"></span>
@@ -152,6 +142,7 @@
                 <div class="more-event-logo"></div>
                 <div class="more-event-business">
                   <span>Eventos Bolivia</span>
+                  <span class="location">Santa Cruz de la Sierra, Bolivia</span>
                 </div>
               </div>
             </div>
