--- a/templates/event/event.html
+++ b/templates/event/event.html
@@ -74,8 +74,8 @@
       <div class="row reset-margin">
         <div class="col-md-10 col-md-offset-1 reset-padding reset-margin1">
           <div class="container-event">
-            <div class="info-event">
-              <div class="info-event-1">
+            <div class="container-event-info">
+              <div class="event-info-detail">
                 <div class="info-event-portada">
                 </div>
                 <div class="info-event-gradient">
@@ -105,9 +105,9 @@
                     </div>
                   </div>
                   <div class="info-event-fecha">
-                    <span class="day font-block">24</span>
-                    <span class="month font-block">ENE</span>
-                    <span class="year font-block">2018</span>
+                    <span class="info-day font-block">24</span>
+                    <span class="info-month font-block">ENE</span>
+                    <span class="info-year font-block">2018</span>
                   </div>
                   <div class="info-event-datos">
                     <span class="ocultar font-info"><i class="icon-calendar icon-info"></i>13 de Noviembre</span>
@@ -121,31 +121,37 @@
                   </div>
                 </div>
               </div>
-              <div class="info-event-2">
+              <div class="event-info-about">
                 <span class="font-block color-blue">Acerca del evento</span>
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco </span>
               </div>
             </div>
-            <div class="more-event">
-              <div class="more-event-1">
-                <div class="more-event-icon">
+            <div class="container-event-more">
+              <div class="event-title-ubication">
+                <div class="event-ubication-icon">
                   <span class="icon-map-pin"></span>
                 </div>
                 <span class="font-ubication">Ubicación del evento</span>
               </div>
-              <div class="more-event-map"></div>
-              <div class="business-info">
-              <div class="more-event-3">
-                <span class="color-blue">Organiza</span>
-              </div>
-              <div class="more-event-4">
-                <div class="more-event-logo"></div>
-                <div class="more-event-business">
-                  <span>Eventos Bolivia</span>
+              <div class="event-map"></div>
+              <div class="event-business-info">
+                <div class="event-business-title">
+                  <span class="color-blue">Organiza</span>
+                </div>
+                <!-- <div class="work-business">
+                  <div class="work-business-logo"></div>
+                  <span>Openred Sucre</span>
                   <span class="location">Santa Cruz de la Sierra, Bolivia</span>
+                </div> -->
+
+                <div class="event-business">
+                  <div class="more-event-logo"></div>
+                  <div class="more-event-business">
+                    <span>Eventos Bolivia</span>
+                    <span class="location">Santa Cruz de la Sierra, Bolivia</span>
+                  </div>
                 </div>
               </div>
-            </div>
             </div>
           </div>
         </div>
