--- a/templates/offer/offer.html
+++ b/templates/offer/offer.html
@@ -67,8 +67,8 @@
 			<div class="row reset-margin">
 				<div class="col-md-10 col-md-offset-1 reset-padding reset-margin1">
 					<div class="container-offer">
-						<div class="offer-information">
-							<div class="offer-information-1">
+						<div class="container-offer-info">
+							<div class="offer-info-detail">
 								<div class="offer-information-2">
 									<div class="offer-info-picture"></div>
 									<div class="gradiente"></div>
@@ -104,7 +104,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="offer-contact-1">
+							<div class="offer-info-contact">
 								<div class="offer-contact-icon">
 									<span class="icon-info"></span>
 								</div>
@@ -120,22 +120,24 @@
 								</div>
 							</div>
 						</div>
-						<div class="offer-information-more">
+						<div class="container-offer-more">
 							<div class="offer-business">
-								<div class="business-info-title">
+								<div class="offer-business-title">
 									<span>Oferta de:</span>
 								</div>
+								<div class="offer-business">
 								<div class="offer-business-logo"></div>
 								<div class="offer-business-info">
 									<span class="name">Pollos Kiky</span>
 									<span class="ubication">Santa Cruz de la Sierra, Bolivia</span>
 								</div>
+
 							</div>
-							<div class="offer-ubication-1">
-								<span class="icono icon-map-pin"></span>
-								<span class="title">Ubicación</span>
+							<div class="offer-title-ubication">
+								<span class="offer-ubication-icon icon-map-pin"></span>
+								<span class="font-ubication">Ubicación</span>
 							</div>
-							<div class="offer-gps"></div>
+							<div class="offer-map"></div>
 							<div class="offer-contact">
 								<div class="offer-contact-icon">
 									<span class="icon-info"></span>
