--- a/templates/work/work.html
+++ b/templates/work/work.html
@@ -74,7 +74,7 @@
 							<div class="work-name">
 								<span class="truncado">Ejecutivo de Ventas para Negocio</span>
 							</div>
-							<div class="container-work-information">
+							<div class="work-info-detail">
 								<span class="publication">Publicado el 10 de enero</span>
 								<span>Postulaciones 24 de Enero</span>
 								<div class="work-category">
@@ -104,19 +104,19 @@
 									</div>
 								</div>
 							</div>
-							<div class="work-description">
+							<div class="work-info-about">
 								<span class="title">Acerca de la Solicitud</span>
 								<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</span>
 							</div>
 						</div>
 						<div class="container-work-more">
-							<div class="work-ubication-1">
-								<span class="icono icon-map-pin"></span>
-								<span class="title">Ubicación</span>
+							<div class="work-title-ubication">
+								<span class="work-ubication-icon icon-map-pin"></span>
+								<span class="font-ubication">Ubicación</span>
 							</div>
-							<div class="container-map"></div>
+							<div class="work-map"></div>
 							<div class="work-business-info">
-								<div class="work-business-1">
+								<div class="work-business-title">
 									<span>Solicitud de:</span>
 								</div>
 								<div class="work-business">
