--- a/templates/work/work.css
+++ b/templates/work/work.css
@@ -228,7 +228,7 @@ body {
   padding: 10px;
 }
 
-.container-work-information {
+.work-info-detail {
   height: auto;
   width: 100%;
   background: white;
@@ -298,7 +298,7 @@ body {
   text-overflow: ellipsis;
 }
 
-.work-description {
+.work-info-about {
   width: 100%;
   height: auto;
   margin-top: 20px;
@@ -309,7 +309,7 @@ body {
   font-size: 17px;
 }
 
-.work-description .title {
+.work-info-about .font-ubication{
   display: block;
   margin: px 0px;
   margin-bottom: 10px;
@@ -322,14 +322,14 @@ body {
   padding: 10px;
 }
 
-.work-ubication-1 {
+.work-title-ubication {
   width: 100%;
   height: 50px;
   padding: 5px 25px;
   margin-bottom: 18px;
 }
 
-.work-ubication-1 .title {
+.work-title-ubication .font-ubication{
   display: block;
   float: left;
   margin-left: 10px;
@@ -338,7 +338,7 @@ body {
   color: #e84d9a;
 }
 
-.work-ubication-1 .icono {
+.work-title-ubication .event-ubication-icon {
   display: block;
   float: left;
   width: 40px;
@@ -351,7 +351,7 @@ body {
   font-size: 30px;
 }
 
-.container-map {
+.work-map{
   width: 100%;
   height: 180px;
   background: #ccc;
@@ -366,7 +366,7 @@ body {
   padding: 5px 15px;
 }
 
-.work-business-1 {
+.work-business-title {
   height: 40px;
   width: 100%;
   margin-top: 10px;
@@ -426,13 +426,13 @@ body {
     width: 600px;
     margin: 0 auto;
   }
-  .container-work-information {
+  .work-info-detail {
     padding: 15px 15px 15px 30px;
   }
-  .work-description {
+  .work-info-about {
     padding: 30px;
   }
-  .work-business-1 {
+  .work-business-title {
     padding: 10px 30px;
   }
   .work-business {
@@ -488,19 +488,19 @@ body {
     margin-top: 15px;
     font-size: 15px;
   }
-  .container-map {
+  .work-map{
     width: 100%;
     height: 300px;
     background: #ccc;
     border-radius: 7px;
   }
-  .work-ubication-1 {
+  .work-title-ubication {
     padding: 5px 25px;
     margin: 10px auto;
     margin-top: 335px;
     height: auto;
   }
-  .work-business-1 {
+  .work-business-title {
     height: 60px;
   }
   .work-business {
@@ -528,7 +528,7 @@ body {
     width: 110px;
     height: 110px;
   }
-  .work-ubication-1 .title {
+  .work-title-ubication .font-ubication{
     display: block;
     float: none;
     margin-left: 10px;
@@ -537,7 +537,7 @@ body {
     color: #e84d9a;
     text-align: center;
   }
-  .work-ubication-1 .icono {
+  .work-title-ubication .work-ubication-icon {
     display: block;
     float: none;
     margin: 0 auto;
